# ingame-dev

./: Cargo.toml  README.md  build.rs
src/: lib.rs  offsets.rs  resource.rs
src/resource/: containers.rs  types.rs
