[package]
name = "ingame-dev"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.6.0"
imgui-api = { git = "https://github.com/Coolsonickirby/imgui-api.git" }
smash_singletons = { git = "https://github.com/WuBoyTH/smash_singletons.git" }
smashline = { git = "https://github.com/HDR-Development/smashline.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/WuBoytH/smash-script.git", branch = "development" }
nnsdk =  { git = "https://github.com/ultimate-research/nnsdk-rs" }
lazy_static = "1.4"
once_cell = "1.12.0"
smash-arc = { git = "https://github.com/jam1garner/smash-arc", features = ["smash-runtime", "rust-zstd", "serialize"] }
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
motion_list_rs = "=1.4.3"
cstring-array = "0.1.1"

[patch.crates-io]
indexmap = { git = "https://github.com/indexmap-rs/indexmap", tag = "1.2.0", features = ["serde-1"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
